--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Özge Şenöz Eğitim & Danışmanlık</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href=.css/styles.css" />
   <meta name="description" content="Eğitim, koçluk ve danışmanlıkta yalın ve etkili çözümler." />
 </head>
 <body>
