--- a/mt-program.html
+++ b/mt-program.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Management Trainee Programı · Özge Şenöz</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href=.css/styles.css" />
   <meta name="description" content="Management Trainee (MT) Eğitim Programı detayları" />
 </head>
 <body>
